--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -345,10 +345,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CONTEXT = \"\"\"extracted from records of objects in the collection of \n",
+    "             the Egyptian museum, Torino, the Museo Egizio – Torino\"\"\"\n",
+    "\n",
     "def make_prompt(entity, text, candidates):\n",
     "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
     "    return f\"\"\"\n",
-    "Disambiguate the entity \"{entity}\" in the following text.\n",
+    "Disambiguate the entity \"{entity}\" in the following text {CONTEXT}.\n",
     "\n",
     "{text}\n",
     "\n",
@@ -432,7 +435,7 @@
    "id": "bcb2b5fd-85e5-472c-8119-e2e02e3276ff",
    "metadata": {},
    "source": [
-    "We lookup the wikidata_ids of entities with the GPT. Next, we call the function to select the right wikidata id with gpt. The results are stored in the `entities` variable. We show the first of the results."
+    "We lookup the wikidata_ids of entities with the GPT. Next, we call the function to select the right wikidata id with gpt. Change the value of the MAX_PROCESSED variable if you do not want all texts to be processed by the LLM. The results are stored in the `entities` variable. We show the first of the results."
    ]
   },
   {
@@ -453,8 +456,10 @@
     }
    ],
    "source": [
+    "MAX_PROCESSED = 100\n",
+    "\n",
     "entities = openai_wikidata_id_selection(model, entities)\n",
-    "texts_output = add_wikidata_ids_to_texts_input(texts_input, entities)\n",
+    "texts_output = add_wikidata_ids_to_texts_input(texts_input[:MAX_PROCESSED], entities)\n",
     "print({key: value for key, value in entities[0].items() if key in [\"entity_text\", \"text\", \"wikidata_id\"]})"
    ]
   },
