--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -232,10 +232,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CONTEXT = \"\"\"extracted from records of objects in the collection of \n",
+    "             the Egyptian museum, Torino, the Museo Egizio – Torino\"\"\"\n",
+    "\n",
     "def make_linking_prompt(entity, text):\n",
     "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
     "    return f\"\"\"\n",
-    "Considering the following description of a museum artefact:\n",
+    "Considering the following description of a museum artefact {CONTEXT}:\n",
     "\n",
     "{text}\n",
     "\n",
@@ -330,7 +333,7 @@
    "id": "9c566a67-36cb-4806-8fea-217a72f31b7e",
    "metadata": {},
    "source": [
-    "Next, we call GPT to suggest the types of links between the entities and the artefact. We call the GPT separately for each unique entity. In case the model used already predicted an entity, we used the link type stored in the cache. The links are collected in the variable `entities` and are later stored in the variable `texts_output`. We show the first item of this variable."
+    "Next, we call GPT to suggest the types of links between the entities and the artefact. We call the GPT separately for each unique entity. In case the model used already predicted an entity, we used the link type stored in the cache. The links are collected in the variable `entities` and are later stored in the variable `texts_output`. Change the value of the MAX_PROCESSED variable if you do not want all texts to be processed by the LLM. We show the first item of this variable."
    ]
   },
   {
@@ -351,8 +354,10 @@
     }
    ],
    "source": [
+    "MAX_PROCESSED = 100\n",
+    "\n",
     "entities = openai_link_suggestion(model, texts_input)\n",
-    "texts_output = add_linking_data_to_texts_input(texts_input, entities)\n",
+    "texts_output = add_linking_data_to_texts_input(texts_input[:MAX_PROCESSED], entities)\n",
     "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
     "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
     "                     \"wikidata_id\": entity[\"wikidata_id\"][\"id\"], \n",
