--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -204,7 +204,9 @@
    "source": [
     "## 3. Named entity recognition\n",
     "\n",
-    "We use OpenAI's ChatGPT for recognizing named entities in the text. For this approach you need an OpenAI API key. Store it in the environment variable OPENAI_API_KEY or in the file OPENAI_API_KEY. For alternative approaches to named entity recognition, see chapter 6."
+    "We use OpenAI's ChatGPT for recognizing named entities in the text. For this approach you need an OpenAI API key. Store it in the environment variable OPENAI_API_KEY or in the file OPENAI_API_KEY. If you are working in Google Colab, you may also store the key among the Secrets, using the name OPENAI_API_KEY. \n",
+    "\n",
+    "For alternative approaches to named entity recognition, see chapter 6."
    ]
   },
   {
@@ -222,10 +224,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "CONTEXT = \"\"\"extracted from records of objects in the collection of \n",
+    "             the Egyptian museum, Torino, the Museo Egizio – Torino\"\"\"\n",
+    "\n",
     "def make_prompt(texts_input, target_labels):\n",
     "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
     "    return f\"\"\"\n",
-    "Convert the following text into a structured markdown format, where you annotate the entities in the text in the following format: [Tom](PERSON) went to [New York](PLACE).\n",
+    "Convert the following text {CONTEXT} into a structured markdown format, \n",
+    "where you annotate the entities in the text in the following format: \n",
+    "[Tom](PERSON) went to [New York](PLACE).\n",
     "\n",
     "Look for the following entities types:\n",
     "{target_labels}\n",
@@ -277,7 +284,7 @@
    "id": "e6455ab8-f742-41f8-b126-49b756725353",
    "metadata": {},
    "source": [
-    "Next, we use the functions to connect to GPT, send it the text and collect the results, which are shown in markdown format"
+    "Next, we use the functions to connect to GPT, send it the text and collect the results, which are shown in markdown format. Change the value of the `MAX_PROCESSED` variable if you do not want all texts to be processed by the LLM"
    ]
   },
   {
@@ -292,13 +299,15 @@
      "text": [
       "Retrieving entities for text 100 from cache\n",
       "Finished processing\n",
-      "️✅ Saved data to file ner_cache_4289af1c351fcc39eb45597ea7cc56f519f41107.json\n",
+      "️✅ Saved data to file ner_cache_82d40eb51c265a0aeac8b70d594ba71a6208024c.json\n",
       "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
     }
    ],
    "source": [
-    "texts_output = openai_ner(model, texts_input)\n",
+    "MAX_PROCESSED = 100\n",
+    "\n",
+    "texts_output = openai_ner(model, texts_input[:MAX_PROCESSED])\n",
     "print(texts_output[0])"
    ]
   },
@@ -622,9 +631,11 @@
     }
    ],
    "source": [
+    "MAX_PROCESSED = 100\n",
+    "\n",
     "texts_output = []\n",
     "last_language_id = \"\"\n",
-    "for index, text in enumerate(texts_input):\n",
+    "for index, text in enumerate(texts_input[:MAX_PROCESSED]):\n",
     "    utils.squeal(f\"Processing text {index + 1}\")\n",
     "    language_id = utils.detect_text_language(text)\n",
     "    if language_id != last_language_id:\n",
