clarified api key text

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "### Dependencies\n",
     "\n",
-    "This notebook depends on two files:\n",
+    "This notebook depends on three files:\n",
     "\n",
     "* utils.py: helper functions\n",
     "* output_data_preparation_11f98441067263d80ee1a6bac27babf0f2c6734b.json: output file of data preparation task\n",
@@ -206,7 +206,7 @@
     "\n",
     "We use OpenAI's ChatGPT for recognizing named entities in the text. For this approach you need an OpenAI API key. Store it in the environment variable OPENAI_API_KEY or in the file OPENAI_API_KEY. If you are working in Google Colab, you may also store the key among the Secrets, using the name OPENAI_API_KEY. \n",
     "\n",
-    "For alternative approaches to named entity recognition, see chapter 6."
+    "For alternative approaches to named entity recognition that do not require the OPENAI_API_KEY, see chapter 6. Also when you just want to process the example notebook data from Egyptian Museum, you can just proceed here without providing the OPENAI_API_KEY. This data has already been processed. The associated names will be fetched from the file `ner_cache.json`."
    ]
   },
   {
