added code utilizing qwen

--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -167,6 +167,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "acf9a2f1-f189-4f24-b1d3-f05ea88eb59f",
+   "metadata": {},
+   "source": [
+    "These two helper functions are needed in different sections, we define them here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "01eb98d1-f840-48fb-a342-fbe992323e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONTEXT = \"\"\"extracted from records of objects in the collection of \n",
+    "             the Egyptian museum, Torino, the Museo Egizio – Torino\"\"\"\n",
+    "\n",
+    "def make_prompt(entity, text, candidates):\n",
+    "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
+    "    return f\"\"\"\n",
+    "Disambiguate the entity \"{entity}\" in the following text {CONTEXT}.\n",
+    "\n",
+    "{text}\n",
+    "\n",
+    "Here are the candidates, in json format:\n",
+    "\n",
+    "{candidates}\n",
+    "\n",
+    "Only return the relevant id, nothing else.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f2cf750e-8af4-40c3-9951-bb32b5df2da3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_wikidata_ids_to_texts_input(texts_input, entities):\n",
+    "    \"\"\"Insert the retrieved wikidata ids into the variable text_inputs and return it\"\"\"\n",
+    "    entities_per_text = {}\n",
+    "    for entity in entities:\n",
+    "        if entity[\"text_id\"] not in entities_per_text:\n",
+    "            entities_per_text[entity[\"text_id\"]] = {}\n",
+    "        entities_per_text[entity[\"text_id\"]][entity[\"entity_text\"]] = entity\n",
+    "    for text_id, text in enumerate(texts_input):\n",
+    "        for entity in text[\"entities\"]:\n",
+    "            if text_id in entities_per_text and entity[\"text\"] in entities_per_text[text_id]:\n",
+    "                entity[\"wikidata_id\"] = entities_per_text[text_id][entity[\"text\"]][\"wikidata_id\"]\n",
+    "    return texts_input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b559246c-da0e-4d94-b857-65527220e7f6",
    "metadata": {},
    "source": [
@@ -177,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e9f3d702-647d-4c64-acab-8da3028f7acb",
    "metadata": {},
    "outputs": [
@@ -219,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "495787e4-d72b-43c4-9834-dbd65174cef1",
    "metadata": {},
    "outputs": [],
@@ -248,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c4087c95-0ee6-4b3e-865e-1258c7d4fbfc",
    "metadata": {},
    "outputs": [],
@@ -263,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "31eaf53f-ce28-4125-81bd-567a3ab793fd",
    "metadata": {},
    "outputs": [],
@@ -300,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "2df11bef-291b-4dab-b907-8291370ebff4",
    "metadata": {},
    "outputs": [
@@ -336,31 +390,6 @@
    "metadata": {},
    "source": [
     "First we define six helper functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "01eb98d1-f840-48fb-a342-fbe992323e2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CONTEXT = \"\"\"extracted from records of objects in the collection of \n",
-    "             the Egyptian museum, Torino, the Museo Egizio – Torino\"\"\"\n",
-    "\n",
-    "def make_prompt(entity, text, candidates):\n",
-    "    \"\"\"Create an LLM prompt, given a text and target labels and return it\"\"\"\n",
-    "    return f\"\"\"\n",
-    "Disambiguate the entity \"{entity}\" in the following text {CONTEXT}.\n",
-    "\n",
-    "{text}\n",
-    "\n",
-    "Here are the candidates, in json format:\n",
-    "\n",
-    "{candidates}\n",
-    "\n",
-    "Only return the relevant id, nothing else.\n",
-    "\"\"\""
    ]
   },
   {
@@ -407,27 +436,6 @@
     "    print(\"Finished processing\")\n",
     "    utils.save_data_to_json_file(gpt_cache, file_name=DISAMBUGUATION_CACHE_FILE_GPT, in_colab=in_colab)\n",
     "    return entities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f2cf750e-8af4-40c3-9951-bb32b5df2da3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_wikidata_ids_to_texts_input(texts_input, entities):\n",
-    "    \"\"\"Insert the retrieved wikidata ids into the variable text_inputs and return it\"\"\"\n",
-    "    entities_per_text = {}\n",
-    "    for entity in entities:\n",
-    "        if entity[\"text_id\"] not in entities_per_text:\n",
-    "            entities_per_text[entity[\"text_id\"]] = {}\n",
-    "        entities_per_text[entity[\"text_id\"]][entity[\"entity_text\"]] = entity\n",
-    "    for text_id, text in enumerate(texts_input):\n",
-    "        for entity in text[\"entities\"]:\n",
-    "            if text_id in entities_per_text and entity[\"text\"] in entities_per_text[text_id]:\n",
-    "                entity[\"wikidata_id\"] = entities_per_text[text_id][entity[\"text\"]][\"wikidata_id\"]\n",
-    "    return texts_input"
    ]
   },
   {
@@ -559,9 +567,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27bfcba0-304f-4c9a-8873-3890401edeb8",
+   "metadata": {},
+   "source": [
+    "## 7. Alternatives for disambiguation\n",
+    "\n",
+    "Here we define some alternatives for disambiguation, for example if you do not have an OpenAI API key or if you do not want to share your data with OpenAI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d31bf85b-1df9-430a-86d5-9b6718635af8",
+   "metadata": {},
+   "source": [
+    "### 7.1. Disambiguate entities with Qwen\n",
+    "\n",
+    "Here we use [Qwen](https://en.wikipedia.org/wiki/Qwen), a locally-run model developed by the company Alibaba. The model has hardware requirements which your computer may not satisfy: it needs a GPU and about 12 gigabytes of memory. When running this model on Google Colab, it is recommended to use the runtime environment `T4 GPU`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3c85cdf-ed72-4679-95b6-69e5cc449cef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISAMBUGUATION_CACHE_FILE_GPT = \"disambiguation_cache_gpt.json\"\n",
+    "model = \"qwen3:8b\"\n",
+    "\n",
+    "def ollama_wikidata_id_selection(model, entities):\n",
+    "    gpt_cache = utils.read_json_file(DISAMBUGUATION_CACHE_FILE_GPT)\n",
+    "    for entity in entities:\n",
+    "        if (entity[\"entity_text\"] in gpt_cache and \n",
+    "            entity[\"text\"] in gpt_cache[entity[\"entity_text\"]] and\n",
+    "            model in gpt_cache[entity[\"entity_text\"]][entity[\"text\"]]):\n",
+    "            utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
+    "            entity[\"wikidata_id\"] = gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] | {\"model\": model}\n",
+    "        else:\n",
+    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to {model}\")\n",
+    "            if \"ollama\" in sys.modules:\n",
+    "                ollama = utils.importlib.import_module(\"ollama\")\n",
+    "            else:\n",
+    "                ollama = utils.import_ollama_module()\n",
+    "            prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
+    "            entity[\"wikidata_id\"] = {model: utils.process_text_with_ollama(model, prompt, ollama)}\n",
+    "            if entity[\"entity_text\"] not in gpt_cache:\n",
+    "                gpt_cache[entity[\"entity_text\"]] = {}\n",
+    "            if entity[\"text\"] not in gpt_cache[entity[\"entity_text\"]]:\n",
+    "                gpt_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
+    "            gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = {key: value \n",
+    "                                                                       for key, value in entity[\"wikidata_id\"].items()}\n",
+    "            utils.write_json_file(DISAMBUGUATION_CACHE_FILE_GPT, gpt_cache)\n",
+    "            time.sleep(2)\n",
+    "    print(\"Finished processing\")\n",
+    "    utils.save_data_to_json_file(gpt_cache, file_name=DISAMBUGUATION_CACHE_FILE_GPT, in_colab=in_colab)\n",
+    "    return entities"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e3ca75d4-3d34-4f5f-9dfc-2dcf299c148d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL = \"qwen3:8b\"\n",
+    "MAX_PROCESSED = 5\n",
+    "\n",
+    "entities = ollama_wikidata_id_selection(MODEL, entities)\n",
+    "texts_output = add_wikidata_ids_to_texts_input(texts_input[:MAX_PROCESSED], entities)\n",
+    "print({key: value for key, value in entities[0].items() if key in [\"entity_text\", \"text\", \"wikidata_id\"]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec55b39d-4ac0-4ba1-8c9c-f097482b1098",
    "metadata": {},
    "outputs": [],
    "source": []
