--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -175,54 +175,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f98f99-340f-4e2d-8587-796e9fc5172a",
+   "id": "a1b0c00f-e1d0-4936-b028-b672a361f552",
    "metadata": {},
    "source": [
-    "## 2. Read the texts that require processing\n",
-    "\n",
-    "The texts should have been processed by the `ner.ipynb` notebook. The file read here is an output file of the `disambiguation-candidates.ipynb` notebook which in turn processed the `ner.ipynb` output. We read the texts and the associated metadata and show the first text with its entities."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "89a5f46e-2cd4-4761-9ab9-4e64259dc259",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'text': 'Anubis', 'label': 'PERSON', 'start_char': 21, 'end_char': 27, 'wikidata_id': {'id': 'Q47534', 'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head', 'model': 'gpt-4o-mini'}}]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "infile_name = \"output_disambiguation_ba25101ddbe8830789bfdfdb3a5ba6312d6853e6.json\"\n",
-    "\n",
-    "with open(infile_name, \"r\") as infile:\n",
-    "    texts_input = json.load(infile)\n",
-    "    infile.close()\n",
-    "print({\"text_cleaned\": texts_input[0][\"text_cleaned\"], \n",
-    "       \"entities\": texts_input[0][\"entities\"]})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3e2c9ca7-bb1c-4c94-afa0-1a0016def39d",
-   "metadata": {},
-   "source": [
-    "## 3. Link entities with GPT\n",
-    "\n",
-    "We link entities to the artefacts by sending a prompt with each entity text, the context text and six candidate link types to an LLM. We ask the LLM to return the id associated with the type that best matches the type of link between the entity and the artefact."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cdc12725-3003-4c45-a6da-55dd3139f281",
-   "metadata": {},
-   "source": [
-    "First we define three helper functions"
+    "These two helper functions are needed in different sections, we define them here."
    ]
   },
   {
@@ -285,6 +241,58 @@
     "            if text_id in entities_per_text and entity[\"text\"] in entities_per_text[text_id]:\n",
     "                entity[\"link\"] = entities_per_text[text_id][entity[\"text\"]][\"link\"]\n",
     "    return texts_input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f98f99-340f-4e2d-8587-796e9fc5172a",
+   "metadata": {},
+   "source": [
+    "## 2. Read the texts that require processing\n",
+    "\n",
+    "The texts should have been processed by the `ner.ipynb` notebook. The file read here is an output file of the `disambiguation-candidates.ipynb` notebook which in turn processed the `ner.ipynb` output. We read the texts and the associated metadata and show the first text with its entities."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "89a5f46e-2cd4-4761-9ab9-4e64259dc259",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'text': 'Anubis', 'label': 'PERSON', 'start_char': 21, 'end_char': 27, 'wikidata_id': {'id': 'Q47534', 'description': 'Egyptian deity of mummification and the afterlife, usually depicted as a man with a canine head', 'model': 'gpt-4o-mini'}}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "infile_name = \"output_disambiguation_ba25101ddbe8830789bfdfdb3a5ba6312d6853e6.json\"\n",
+    "\n",
+    "with open(infile_name, \"r\") as infile:\n",
+    "    texts_input = json.load(infile)\n",
+    "    infile.close()\n",
+    "print({\"text_cleaned\": texts_input[0][\"text_cleaned\"], \n",
+    "       \"entities\": texts_input[0][\"entities\"]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e2c9ca7-bb1c-4c94-afa0-1a0016def39d",
+   "metadata": {},
+   "source": [
+    "## 3. Link entities with GPT\n",
+    "\n",
+    "We link entities to the artefacts by sending a prompt with each entity text, the context text and six candidate link types to an LLM. We ask the LLM to return the id associated with the type that best matches the type of link between the entity and the artefact."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdc12725-3003-4c45-a6da-55dd3139f281",
+   "metadata": {},
+   "source": [
+    "First we define three helper functions"
    ]
   },
   {
@@ -482,9 +490,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "460091a2-7b72-49fa-9b11-cba73a5ad1f7",
+   "metadata": {},
+   "source": [
+    "## 6. Alternatives for entity linking\n",
+    "\n",
+    "Here we define some alternatives for disambiguation, for example if you do not have an OpenAI API key or if you do not want to share your data with OpenAI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "954dc941-21b3-434e-8853-402c55952a47",
+   "metadata": {},
+   "source": [
+    "### 6.1. Disambiguate entities with Qwen\n",
+    "\n",
+    "Here we use [Qwen](https://en.wikipedia.org/wiki/Qwen), a locally-run model developed by the company Alibaba. The model has hardware requirements which your computer may not satisfy: it needs a GPU and about 12 gigabytes of memory. When running this model on Google Colab, it is recommended to use the runtime environment `T4 GPU`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79011006-ae4a-4129-9d75-3f34e7b45a65",
+   "id": "026a56e8-a3ca-4247-a9d4-70d0a7341662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LINKING_CACHE_FILE = \"linking_cache.json\"\n",
+    "model = \"gpt-4o-mini\"\n",
+    "\n",
+    "\n",
+    "def ollama_link_suggestion(model, texts_input):\n",
+    "    entities = utils.extract_entities_from_ner_input(texts_input)\n",
+    "    linking_cache = utils.read_json_file(LINKING_CACHE_FILE)\n",
+    "    for entity in entities:\n",
+    "        if (entity[\"entity_text\"] in linking_cache and \n",
+    "            entity[\"text\"] in linking_cache[entity[\"entity_text\"]] and\n",
+    "            model in linking_cache[entity[\"entity_text\"]][entity[\"text\"]]):\n",
+    "            utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
+    "            if \"link\" not in entity: entity[\"link\"] = {}\n",
+    "            entity[\"link\"][model] = linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model]\n",
+    "        else:\n",
+    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
+    "            if \"ollama\" in sys.modules:\n",
+    "                ollama = utils.importlib.import_module(\"ollama\")\n",
+    "            else:\n",
+    "                ollama = utils.import_ollama_module()\n",
+    "            time.sleep(1)\n",
+    "            prompt = make_linking_prompt(entity[\"entity_text\"], entity[\"text\"])\n",
+    "            if \"link\" not in entity: entity[\"link\"] = {}\n",
+    "            entity[\"link\"][model] = utils.process_text_with_ollama(model, prompt, ollama)\n",
+    "            if entity[\"entity_text\"] not in linking_cache:\n",
+    "                linking_cache[entity[\"entity_text\"]] = {}\n",
+    "            if entity[\"text\"] not in linking_cache[entity[\"entity_text\"]]:\n",
+    "                linking_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
+    "            linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = entity[\"link\"][model]\n",
+    "            utils.write_json_file(LINKING_CACHE_FILE, linking_cache)\n",
+    "    print(\"Finished processing\")\n",
+    "    utils.save_data_to_json_file(linking_cache, file_name=LINKING_CACHE_FILE, in_colab=in_colab)\n",
+    "    return entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10495a0d-cf81-4628-8a6d-c03453806f39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_PROCESSED = 100\n",
+    "\n",
+    "entities = ollama_link_suggestion(model, texts_input)\n",
+    "texts_output = add_linking_data_to_texts_input(texts_input[:MAX_PROCESSED], entities)\n",
+    "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
+    "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
+    "                     \"wikidata_id\": entity[\"wikidata_id\"][\"id\"], \n",
+    "                     \"link\": list(entity[\"link\"].values())[0]} for entity in texts_output[0][\"entities\"]]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f8f7596-48bc-42f9-82fc-31968655c125",
    "metadata": {},
    "outputs": [],
    "source": []
