more qwen tests

--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "4fd95fe3-bc47-413d-9e37-274820524903",
    "metadata": {},
    "outputs": [],
@@ -130,6 +130,7 @@
     "from IPython.display import HTML\n",
     "import os\n",
     "import requests\n",
+    "import sys\n",
     "import time\n",
     "import utils"
    ]
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5504175d-8caf-4917-b181-5f449cc7f4e6",
    "metadata": {},
    "outputs": [],
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9fd0b672-7c62-4cdc-9e92-80c1a6f2f31b",
    "metadata": {},
    "outputs": [],
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "89a5f46e-2cd4-4761-9ab9-4e64259dc259",
    "metadata": {},
    "outputs": [
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2e34a6d1-e14f-4230-8a1e-55a068c0c2aa",
    "metadata": {},
    "outputs": [],
@@ -320,7 +321,7 @@
     "            if \"openai_client\" not in vars():\n",
     "                openai_api_key = utils.get_openai_api_key()\n",
     "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
-    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
+    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to {model}T\")\n",
     "            time.sleep(1)\n",
     "            prompt = make_linking_prompt(entity[\"entity_text\"], entity[\"text\"])\n",
     "            if \"link\" not in entity: entity[\"link\"] = {}\n",
@@ -346,25 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "30bd265f-5c55-42b4-9f06-b603a024e592",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retrieving entity \"Bagnani\" of text 100 from cache\n",
-      "Finished processing\n",
-      "️✅ Saved data to file linking_cache_7d1cb217b7ded2bec61ee23fc7daae71fde7b271.json\n",
-      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'entity_text': 'Anubis', 'wikidata_id': 'Q47534', 'link': '1'}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "MAX_PROCESSED = 100\n",
     "\n",
-    "entities = openai_link_suggestion(model, texts_input)\n",
+    "entities = openai_link_suggestion(model, texts_input[:MAX_PROCESSED])\n",
     "texts_output = add_linking_data_to_texts_input(texts_input[:MAX_PROCESSED], entities)\n",
     "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
     "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
@@ -396,47 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "460020ff-a77c-45ad-a9c5-456f9608e074",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span><sup>Q47534,1</sup>. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span><sup>Q146104,1</sup> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span><sup>Q101583,7</sup> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span><sup>Q42606,5</sup> (1390-1353 BC)."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span><sup>Q129106,1</sup>. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span><sup>Q822895,4</sup> collection (1824). C. 271"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for text_id, text in enumerate(texts_output):\n",
     "    if text_id < 3:\n",
@@ -455,36 +408,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "09bad32c-1c93-4d99-b6a1-9896acda1676",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "️✅ Saved data to file output_linking_34e26bfd19c837e400a5fcb214cd1e7a25304a12.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "utils.save_data_to_json_file(texts_output, file_name=\"output_linking.json\", in_colab=in_colab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "44dec570-a51e-4822-8e14-50dbfc2bea01",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "️✅ Saved data to file entities_table.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "utils.save_entities_as_table(\"entities_table.csv\", texts_output)"
    ]
@@ -511,13 +448,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "026a56e8-a3ca-4247-a9d4-70d0a7341662",
    "metadata": {},
    "outputs": [],
    "source": [
     "LINKING_CACHE_FILE = \"linking_cache.json\"\n",
-    "model = \"gpt-4o-mini\"\n",
     "\n",
     "\n",
     "def ollama_link_suggestion(model, texts_input):\n",
@@ -531,12 +467,12 @@
     "            if \"link\" not in entity: entity[\"link\"] = {}\n",
     "            entity[\"link\"][model] = linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model]\n",
     "        else:\n",
-    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
+    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to {model}\")\n",
     "            if \"ollama\" in sys.modules:\n",
     "                ollama = utils.importlib.import_module(\"ollama\")\n",
     "            else:\n",
     "                ollama = utils.import_ollama_module()\n",
-    "            time.sleep(1)\n",
+    "            utils.install_ollama_model(model, ollama)\n",
     "            prompt = make_linking_prompt(entity[\"entity_text\"], entity[\"text\"])\n",
     "            if \"link\" not in entity: entity[\"link\"] = {}\n",
     "            entity[\"link\"][model] = utils.process_text_with_ollama(model, prompt, ollama)\n",
@@ -553,15 +489,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "10495a0d-cf81-4628-8a6d-c03453806f39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending entity \"Amenhotep III\" of text 2 to GPT\n",
+      "Finished processing\n",
+      "️✅ Saved data to file linking_cache_07459ca29ca5b5c41d6328e5a856551751b05ecc.json\n",
+      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'entity_text': 'Anubis', 'wikidata_id': 'Q47534', 'link': '1'}]}\n"
+     ]
+    }
+   ],
    "source": [
-    "MAX_PROCESSED = 100\n",
+    "MODEL = \"qwen3:8b\"\n",
+    "MAX_PROCESSED = 2\n",
     "\n",
-    "entities = ollama_link_suggestion(model, texts_input)\n",
-    "texts_output = add_linking_data_to_texts_input(texts_input[:MAX_PROCESSED], entities)\n",
+    "processed_entities = ollama_link_suggestion(MODEL, texts_input[:MAX_PROCESSED])\n",
+    "texts_output = add_linking_data_to_texts_input(texts_input[:MAX_PROCESSED], processed_entities)\n",
     "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
     "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
     "                     \"wikidata_id\": entity[\"wikidata_id\"][\"id\"], \n",
